--- a/AP1-GP2-PhoTographe/config/packages/security.yaml
+++ b/AP1-GP2-PhoTographe/config/packages/security.yaml
@@ -4,11 +4,16 @@ security:
     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
   # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
   providers:
-    # used to reload user from session & other features (e.g. switch_user)
+    # Comment les infos sont récupérées
     app_user_provider:
       entity:
-        class: App\Entity\User
+        # les utilisateurs seront récupérés à partir de l'entité user
+        class:
+          App\Entity\User
+          # la propriété email est utilisé pour connecté les utilisateurs
         property: email
+
+  # Les pare-feus gère la sécurité
   firewalls:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -16,6 +21,7 @@ security:
     main:
       lazy: true
       provider: app_user_provider
+      # le chemin pour me déco
       custom_authenticator: App\Security\UsersAuthenticator
       logout:
         path: app_logout
@@ -37,10 +43,7 @@ security:
 when@test:
   security:
     password_hashers:
-      # By default, password hashers are resource intensive and take time. This is
-      # important to generate secure password hashes. In tests however, secure hashes
-      # are not important, waste resources and increase test times. The following
-      # reduces the work factor to the lowest possible values.
+      # Symfony choisira la meilleure méthode pour hacher le MDP
       Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
         algorithm: auto
         cost: 4 # Lowest possible value for bcrypt
